client/main.scss
@import url('https://fonts.googleapis.com/css?family=Nunito:200,400');
@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');

$fontColor: #ffffff;
$btnBackground: #ff9900;
$green: #00c656;
$bg: #828282;
$err: #ff5454;
$cancel: #f92545;
$success: #00d66b;
$boardClass: #30e6ff;
$full: 100vh;

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

h1, h2, h3, h4, h5, h6, a, p, input[type="submit"], button{
    color: $fontColor;
    font-family: 'Nunito', sans-serif;
    font-weight: normal;
}

h1 {
    font-family: 'Press Start 2P';
    color: #322d72;
}

input[type="submit"], button {
    background-color: $btnBackground;
    border: none;
    height: 50px;
    font-family: 'Nunito', sans-serif;
}

a {
    text-decoration: none;
}

body {
    background-color: $bg;
}

img {
    width: 100%;
    height: 100%;
}

.err-msg {
    color: $err;
}
.tile {
    width: 12.5%;
    display: inline-block;
}
//Tile alternating background
.tile:nth-child(-2n+8),
.tile:nth-child(8) ~ .tile:nth-child(-2n+15),
.tile:nth-child(16) ~ .tile:nth-child(-2n+24),
.tile:nth-child(24) ~ .tile:nth-child(-2n+31),
.tile:nth-child(32) ~ .tile:nth-child(-2n+40),
.tile:nth-child(40) ~ .tile:nth-child(-2n+47),
.tile:nth-child(48) ~ .tile:nth-child(-2n+56),
.tile:nth-child(56) ~ .tile:nth-child(-2n+63) {
    background-color: #f49542;
}

.highlight {
    background-color: #ffd368 !important;
    opacity: .6;
    border: 1px solid #e8a400;
}

.in-check {
    background-color: #f74747 !important;
}

@keyframes winner {
    from {font-size: 30px;}
    to {font-size: 40px;}
}

@keyframes fade {
    from {border: none}
    to {border: 2px solid white}
}

@keyframes turn {
    from {opacity: 1}
    to {opacity: .3}
}

@keyframes pulse {
    0% {background-color: #ea1300;
        width: 110px;
        height: 110px;
    }
    12% {
        width: 112px;
        height: 112px;
    }
    25% {background-color: #ffbb32;
        width: 115px;
        height: 115px;
    }
    33% {
        width: 118px;
        height: 118px;
    }
    50% {background-color: #1c4dff;
        width: 125px;
        height: 125px;
    }
    63% {
        width: 130px;
        height: 130px;
    }
    75% {background-color: #9514ff;
        width: 135px;
        height: 135px;
    }
    83% {
        width: 140px;
        height: 140px;
    }
    100% {background-color: #ff1466;
        width: 145px;
        height: 145px;
    }
}

@keyframes typeSelect {
    from {background-color: #ffffff;}
    to {background-color: #ffae2d;}
}
/* ... */

